--- a/grants.html
+++ b/grants.html
@@ -60,7 +60,8 @@
 <div id="bb">
   <ul>
 
-
+<li>   NSF Conference Grant, DMS #2220824, <i>Pan-American School on
+    Commutative Algebra (PASCA 2022)</i>, June 2022.<br />
 
 <li>   NSF Standard Grant, DMS #2001645: <i>Asymptotic growth of symbolic powers, mixed multiplicities, and convex bodies,</i> 2020-2023.<br />
 
@@ -68,7 +69,7 @@
 
 <li>   Oberwolfach Leibniz Fellow, MFO, Summer 2018.<br />
 
-<li>   NSF Conference Grant, DMS #1745772, <i>KUMUNU 2017</i>, University of Kansas, October 2017.<br />
+<li>   NSF Conference Grant, DMS #1745772, <i>KUMUNU 2017</i>, October 2017.<br />
 
 <li>  AMS-Simons Travel Grant, July 2017- June 2019.<br />
   <li> Bilsland Dissertation Fellowship, <i>awarded to outstanding Ph.D. candidates in their final year of doctoral degree completion</i>, Purdue University, College of Science, June 2014- May 2015.<br />
