--- a/research.html
+++ b/research.html
@@ -23,10 +23,17 @@
 </div>
 
 <div id="rightcolumn">
+<div id="rightcolumn">
+<img src="Photo_Webpage.jpg" width: 200% 
+  height: auto  Hspace = "20" Vspace ="20"  id=jmontano>
  
 <h2>Research</h2>
 <p style="text-align:justify" >
-My research is in commutative algebra and its interactions with algebraic geometry, combinatorics, and homological algebra. In particular, I am interested in multiplicities, blowup algebras, integral dependence, residual intersections, local cohomology, symbolic powers, and resolutions.
+My research is in commutative algebra and its interactions with
+  combinatorics and algebraic geometry. In particular, I am interested
+  in multiplicities, blowup algebras, integral dependence, residual
+  intersections, local cohomology, symbolic powers, resolutions, and
+  convex geometry.
 </p>
 
   <br />
@@ -53,7 +60,7 @@ My research is in commutative algebra and its interactions with algebraic geomet
     <tr valign="top"><td height="35">  20.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2203.09902.pdf"><i>Frobenius methods in combinatorics</i></a>
      <br />with Alessandro De Stefani and  Luis N&uacute;&ntilde;ez-Betancourt
-     <br /><b>Submitted</b>
+     <br /><b>To appear in S&atilde;o Paulo Journal of Mathematical Sciences</b>
        </td></tr>
     
        
@@ -115,7 +122,7 @@ My research is in commutative algebra and its interactions with algebraic geomet
     <tr valign="top"><td height="35">  12.</td>
      <td height="30"><a href="https://arxiv.org/pdf/2001.08313.pdf"><i>Analytic spread and integral closure of integrally decomposable modules</i></a>
        <br />with Carles Bivi&agrave-Ausina
-       <br /><b>To appear in Nagoya Mathematical Journal</b>
+       <br /><b>Nagoya Mathematical Journal</b> 245 (2022), 166–191
     </td></tr>
 
 	
