--- a/grants.html
+++ b/grants.html
@@ -60,6 +60,8 @@
 <div id="bb">
   <ul>
 
+    <li>   Oberwolfach Research Fellow, MFO, November-December 2022.<br />
+
 <li>   NSF Conference Grant, DMS #2220824, <i>Pan-American School on
     Commutative Algebra (PASCA 2022)</i>, June 2022.<br />
 
