--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Tempe, AZ 85287-1804</p>
 <hr />
   <p style="text-align:justify">
 
-    I am an Assistant Professor in the <a href="https://math.asu.edu">School of Mathematical and Statistical Sciences</a> at <a href="http://nmsu.edu/">Arizona State University</a>.
+    I am an Assistant Professor in the <a href="https://math.asu.edu">School of Mathematical and Statistical Sciences</a> at <a href="http://asu.edu/">Arizona State University</a>.
  <br />
 <br />
 Until the summer of 2022,  I was an Assistant Professor in the <a
