--- a/grants.html
+++ b/grants.html
@@ -47,8 +47,11 @@
 </div>
 
 
-
 <div id="rightcolumn">
+<div id="rightcolumn">
+<img src="NSF.png" width: "10%" border:none height: auto  Hspace =
+  "20" Vspace ="20" id=NSF>
+
 
 
 
