--- a/research.html
+++ b/research.html
@@ -25,7 +25,7 @@
 <div id="rightcolumn">
 <div id="rightcolumn">
 <img src="Photo_Webpage.jpg" width: 200% 
-  height: auto  Hspace = "20" Vspace ="20"  id=jmontano>
+  height: auto  Hspace = "20" Vspace ="20"  id=jmResearch>
  
 <h2>Research</h2>
 <p style="text-align:justify" >
@@ -285,6 +285,9 @@ My research is in commutative algebra and its interactions with
 
     <li><i>XII School of Mathematics</i>, Federal University of
     Sergipe, Brazil (Online), January-February, 2023.<br />
+
+      <li><i>Department of Mathematical Sciences Colloquiu</i>,
+      University of Texas at El Paso (Online), November 4, 2022.<br />
     
   <li><i>Combinatorial and Commutative Algebra Seminar</i>, Oklahoma
     State University (Online), April 20, 2022.<br />
