--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,7 @@
 <div id="rightcolumn">
 <div id="rightcolumn">
 <img src="IMG_8372.jpg" width: 200% 
-  height: auto  Hspace = "20" Vspace ="20"  id=jmontano>
+  height: auto  Hspace = "20" Vspace ="20"  id=jmTeaching>
 <h2>Teaching</h2>
 <p style="text-align:justify"> 
 
