--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 
 <div id="rightcolumn">
 <div id="rightcolumn">
-<img src="Photo_Webpage.jpg" width: 200% 
+<img src="Photo_Webpage.jpg"
   height: auto  Hspace = "20" Vspace ="20"  id=jmResearch>
  
 <h2>Research</h2>
