--- a/teaching.html
+++ b/teaching.html
@@ -24,8 +24,7 @@
 
 <div id="rightcolumn">
 <div id="rightcolumn">
-<img src="IMG_8372.jpg" width: 200% 
-  height: auto  Hspace = "20" Vspace ="20"  id=jmTeaching>
+<img src="IMG_8372.jpg" height: auto  Hspace = "20" Vspace ="20"  id=jmTeaching>
 <h2>Teaching</h2>
 <p style="text-align:justify"> 
 
