--- a/grants.html
+++ b/grants.html
@@ -49,7 +49,7 @@
 
 <div id="rightcolumn">
 <div id="rightcolumn">
-<img src="NSF.png" width: "10%" height: auto  Hspace =
+<img src="NSF.png" height: auto  Hspace =
   "20" Vspace ="25" id=NSF>
 
 
