--- a/grants.html
+++ b/grants.html
@@ -49,8 +49,7 @@
 
 <div id="rightcolumn">
 <div id="rightcolumn">
-<img src="NSF.png" height: auto  Hspace =
-  "20" Vspace ="25" id=NSF>
+<img src="NSF.png" height: auto  Hspace ="10" Vspace ="10" id=NSF>
 
 
 
