--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Before joining KU, I was a Ph.D. student at <a href="http://purdue.edu">Purdue U
 <hr />
 
 
-<a href="https://jack-jeffries.github.io/PASCA.html"><h4>Pan-American School in Commutative Algebra  (PASCA 2022).</h4></a>
+<a href="https://jack-jeffries.github.io/PASCA22/PASCA.html"><h4>Pan-American School in Commutative Algebra  (PASCA 2022).</h4></a>
 
 
 
