--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@ My research is in commutative algebra and its interactions with
 	     <tr valign="top"><td height="35">  16.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2010.07918.pdf"><i>Convex bodies and graded families of monomial ideals</i></a>
      <br />with  Yairon Cid-Ruiz
-     <br /><b>Submitted</b>
+     <br /><b>To appear in Revista Matem&aacute;tica Iberoamericana</b>
     </td></tr>
 
 
