--- a/research.html
+++ b/research.html
@@ -286,7 +286,7 @@ My research is in commutative algebra and its interactions with
     <li><i>XII School of Mathematics</i>, Federal University of
     Sergipe, Brazil (Online), January-February, 2023.<br />
 
-      <li><i>Department of Mathematical Sciences Colloquiu</i>,
+      <li><i>Department of Mathematical Sciences Colloquium</i>,
       University of Texas at El Paso (Online), November 4, 2022.<br />
     
   <li><i>Combinatorial and Commutative Algebra Seminar</i>, Oklahoma
