--- a/research.html
+++ b/research.html
@@ -305,6 +305,13 @@ My research is in commutative algebra and its interactions with
     <li><i>XII School of Mathematics</i>, Federal University of
     Sergipe, Brazil (Online), January-February, 2023.<br />
 
+    
+
+
+      <li><i>Algebra&Geometry seminar</i>,
+    University of Genova, December 21, 2022.<br />
+
+
       <li><i>Department of Mathematical Sciences Colloquium</i>,
     University of Texas at El Paso (Online), November 4, 2022.<br />
 
@@ -341,7 +348,8 @@ My research is in commutative algebra and its interactions with
   <li><i>National Congress of the Mexican Math Society</i>, Online,  October 21, 2021.<br />
 
 
-      <li><i>Algebra and Algebraic Geometry Seminar</i>,  McMaster University (Online), July 19, 2021.<br />
+      <li><i>Algebra and Algebraic Geometry Seminar</i>,  McMaster
+      University, Canada (Online), July 19, 2021.<br />
 
 
     <li><i>Virtual commutative algebra seminar</i>,  IIT Bombay, India (Online), July 9, 2021.<br />
@@ -420,7 +428,7 @@ My research is in commutative algebra and its interactions with
       <li><i>KuMuNu jr </i>2017, University of Nebraska-Lincoln, April 8, 2017.<br />
 
    
-<li><i>Algebra Seminar</i>, University of Missouri, February 27, 2017; April 6, 2020.<br />
+<li><i>Algebra Seminar</i>, University of Missouri, February 27, 2017.<br />
 
 <li><i>Department of Mathematics Colloquium</i>, New Mexico State University, February 9, 2017. <br />	    
 
