--- a/research.html
+++ b/research.html
@@ -309,7 +309,7 @@ My research is in commutative algebra and its interactions with
 
 
       <li><i>Algebra&Geometry seminar</i>,
-    University of Genova, December 21, 2022.<br />
+    University of Genova, Italy, December 21, 2022.<br />
 
 
       <li><i>Department of Mathematical Sciences Colloquium</i>,
