--- a/research.html
+++ b/research.html
@@ -57,6 +57,14 @@ My research is in commutative algebra and its interactions with
 
   <table>
 
+
+       <Tr Valign="top"><td height="35">  22.</td>
+      <td height="30"><a href="https://arxiv.org/pdf/2212.13091.pdf"><i>K-polynomials of multiplicity-free varieties</i></a>
+     <br />with  Federico Castillo, Yairon Cid-Ruiz, and Fatemeh Mohammadi 
+     <br /><b>Submitted</b>
+    </td></tr>
+
+
     <tr valign="top"><td height="35">  21.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2210.03358.pdf"><i>Purity of monoids and characteristic-free splittings in semigroup rings</i></a>
      <br />with Alessandro De Stefani and  Luis N&uacute;&ntilde;ez-Betancourt
@@ -66,7 +74,7 @@ My research is in commutative algebra and its interactions with
 
    
        
-        <tr valign="top"><td height="35">  20.</td>
+        <Tr Valign="top"><td height="35">  20.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2109.10299.pdf"><i>Double Schubert polynomials do have saturated Newton polytopes</i></a>
      <br />with  Federico Castillo, Yairon Cid-Ruiz, and Fatemeh Mohammadi 
      <br /><b>Submitted</b>
