--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Tempe, AZ 85287-1804</p>
  
     <br />
 
-    My research is supported  by  NSF Grant <b> DMS #2001645</b>.
+    My research is supported  by  NSF Grant <b> DMS #2001645/2303605</b>.
     
 </p>
 <hr />
