--- a/research.html
+++ b/research.html
@@ -38,7 +38,7 @@ My research is in commutative algebra and its interactions with
 
   <br />
 
-  My research is supported  by  NSF Grant <b> DMS #2001645</b>.
+  My research is supported  by  NSF Grant <b> DMS #2001645/2303605</b>.
 
   <br />
 
@@ -105,7 +105,7 @@ My research is in commutative algebra and its interactions with
 	     <tr valign="top"><td height="35">  16.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2010.07918.pdf"><i>Convex bodies and graded families of monomial ideals</i></a>
      <br />with  Yairon Cid-Ruiz
-     <br /><b>To appear in Revista Matem&aacute;tica Iberoamericana</b>
+     <br /><b>Revista Matem&aacute;tica Iberoamericana</b>  38 (2022), 2033–2056
     </td></tr>
 
 
@@ -303,15 +303,17 @@ My research is in commutative algebra and its interactions with
     --->
 
      <li><i> MSRI summer school Colloquium</i>,  University of Notre
-     Dame, May 26, 2023.<br />
+    Dame, May 26, 2023.<br />
 
+    <li><i>Algebra Seminar</i>, University of Missouri, April 17, 2023.<br />
 
+    <li><i>AMS Sectional Meeting</i>, University of Cincinnati, April 15, 2023.<br /> 
     
  <li><i>Tulane Mathematics Colloquium</i>, Tulane University, March 30, 2023.<br />
 
 
     <li><i>XII School of Mathematics</i>, Federal University of
-    Sergipe, Brazil (Online), January-February, 2023.<br />
+    Sergipe, Brazil (Online), February 14-16, 2023.<br />
 
     
 
