--- a/grants.html
+++ b/grants.html
@@ -62,12 +62,16 @@
 <div id="bb">
   <ul>
 
+     <li>  AIM SQuaREs Grant, 2023-2025 <br />
+    <li>  Natural Sciences DEI Seed Grant, ASU, 2023 <br />
+    <li>  NSF Conference Grant, DMS \#2302498, <i> SLAM 2023 </i> March 2023 <br />
+
     <li>   Oberwolfach Research Fellow, MFO, November-December 2022.<br />
 
 <li>   NSF Conference Grant, DMS #2220824, <i>Pan-American School on
     Commutative Algebra (PASCA 2022)</i>, June 2022.<br />
 
-<li>   NSF Standard Grant, DMS #2001645: <i>Asymptotic growth of symbolic powers, mixed multiplicities, and convex bodies,</i> 2020-2023.<br />
+<li>   NSF Standard Grant, DMS #2001645/2303605: <i>Asymptotic growth of symbolic powers, mixed multiplicities, and convex bodies,</i> 2020-2023.<br />
 
     <li>  Faculty Travel Grant,   College of Arts and Sciences, NMSU, Fall 2018, Spring 2022.<br />
 
