--- a/grants.html
+++ b/grants.html
@@ -64,7 +64,7 @@
 
      <li>  AIM SQuaREs Grant, 2023-2025 <br />
     <li>  Natural Sciences DEI Seed Grant, ASU, 2023 <br />
-    <li>  NSF Conference Grant, DMS \#2302498, <i> SLAM 2023 </i> March 2023 <br />
+    <li>  NSF Conference Grant, DMS #2302498, <i> SLAM 2023,</i> March 2023 <br />
 
     <li>   Oberwolfach Research Fellow, MFO, November-December 2022.<br />
 
