--- a/grants.html
+++ b/grants.html
@@ -73,7 +73,7 @@
 
 <li>   NSF Standard Grant, DMS #2001645/2303605: <i>Asymptotic growth of symbolic powers, mixed multiplicities, and convex bodies,</i> 2020-2023.<br />
 
-    <li>  Faculty Travel Grant,   College of Arts and Sciences, NMSU, Fall 2018, Spring 2022.<br />
+<!--    <li>  Faculty Travel Grant,   College of Arts and Sciences, NMSU, Fall 2018, Spring 2022.<br />-->
 
 <li>   Oberwolfach Leibniz Fellow, MFO, Summer 2018.<br />
 
