--- a/grants.html
+++ b/grants.html
@@ -62,6 +62,7 @@
 <div id="bb">
   <ul>
 
+  <li>   Research Member, SLMath(MSRI), Spring 2024 <br />
      <li>  AIM SQuaREs Grant, 2023-2025 <br />
     <li>  Natural Sciences DEI Seed Grant, ASU, 2023 <br />
     <li>  NSF Conference Grant, DMS #2302498, <i> SLAM 2023,</i> March 2023 <br />
