--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N3C6RLBEJ4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N3C6RLBEJ4');
+</script>
+
 	<title>Jonathan Monta&ntilde;o</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
@@ -42,7 +52,7 @@ Tempe, AZ 85287-1804</p>
 </p>
 
 <p>
-  <a href="CV.pdf"><b>CV</b></a>
+  <a href="https://drive.google.com/file/d/1RG2JeUBeJjfj3UQjt8Q3pz3yVnxywfAO/view?usp=share_link"><b>CV</b></a>
   <br />
 
  
