--- a/research.html
+++ b/research.html
@@ -67,6 +67,14 @@ My research is in commutative algebra and its interactions with
 
   <table>
 
+       <Tr Valign="top"><td height="35">  23.</td>
+      <td height="30"><a
+      href="https://arxiv.org/pdf/2303.10486.pdf"><i>The core of
+      monomial ideals</i></a>
+     <br />with  Louiza Fouli, Claudia Polini, and Bernd Ulrich 
+     <br /><b>Submitted</b>
+    </td></tr>
+
 
        <Tr Valign="top"><td height="35">  22.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2212.13091.pdf"><i>K-polynomials of multiplicity-free varieties</i></a>
