--- a/teaching.html
+++ b/teaching.html
@@ -35,12 +35,12 @@
 
 <h3>Arizona State University</h3>
 
-  <h4>Current semester (Fall 2022):</h4>
+  <h4>Current semester (Spring 2023):</h4>
 
 
 
-  Math 442 (Advanced Linear Algebra) <br />
-  TR: 12:00–1:15 PM, WXLRA304.<br />
+  Math 441 (Ring Theory) <br />
+  MW: 12:00–1:15 PM, WXLRA111.<br />
 
 
 
@@ -57,7 +57,16 @@
 
 <br />
 
-Below is the list of courses I have taught so far.<br />
+  Below is the list of courses I have taught so far.<br />
+
+<h3>Arizona State University</h3>
+
+<h4>Instructor:</h4>
+Math 442 (Advanced Linear Algebra), Fall 2022. <br />
+
+
+<hr />
+
 
 <h3>New Mexico State University</h3>
 
