--- a/research.html
+++ b/research.html
@@ -67,6 +67,15 @@ My research is in commutative algebra and its interactions with
 
   <table>
 
+    
+    <tr valign="top"><td height="35">  24.</td>
+      <td height="30"><a href="https://arxiv.org/pdf/2305.18167.pdf"><i>Ladder determinantal varieties and their symbolic blowups</i></a>
+     <br />with Alessandro De Stefani, Luis
+      N&uacute;&ntilde;ez-Betancourt, Lisa Seccia, and Matteo Varbaro
+     <br /><b>Submitted</b>
+       </td></tr>
+    
+
        <Tr Valign="top"><td height="35">  23.</td>
       <td height="30"><a
       href="https://arxiv.org/pdf/2303.10486.pdf"><i>The core of
