--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Tempe, AZ 85287-1804</p>
 </p>
 
 <p>
-  <a href="https://drive.google.com/file/d/1RG2JeUBeJjfj3UQjt8Q3pz3yVnxywfAO/view?usp=share_link"><b>CV</b></a>
+  <a href="CV.pdf"><b>CV</b></a>
   <br />
 
  
