--- a/research.html
+++ b/research.html
@@ -125,7 +125,7 @@ My research is in commutative algebra and its interactions with
             <tr valign="top"><td height="35">  17.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2203.09902.pdf"><i>Frobenius methods in combinatorics</i></a>
      <br />with Alessandro De Stefani and  Luis N&uacute;&ntilde;ez-Betancourt
-     <br /><b>To appear in S&atilde;o Paulo Journal of Mathematical Sciences</b>
+     <br /><b>S&atilde;o Paulo Journal of Mathematical Sciences</b> 17(2023), 387-429
        </td></tr>
     
 
@@ -329,7 +329,12 @@ My research is in commutative algebra and its interactions with
 <!---	    
     --->
 
-     <li><i> MSRI summer school Colloquium</i>,  University of Notre
+      <li><i>Algebra Seminar</i>,  Auburn University, October 16, 2023.<br />
+
+      <li><i>Summer CAMP</i>,  University of Nebraska-Lincoln, August 9, 2023.<br />
+
+
+     <li><i>MSRI summer school Colloquium</i>,  University of Notre
     Dame, May 26, 2023.<br />
 
     <li><i>Algebra Seminar</i>, University of Missouri, April 17, 2023.<br />
