--- a/teaching.html
+++ b/teaching.html
@@ -35,12 +35,13 @@
 
 <h3>Arizona State University</h3>
 
-  <h4>Current semester (Spring 2023):</h4>
+  <h4>Current semester (Fall 2023):</h4>
 
+  Math 598 (Introduction to Algebraic Geometry and Toric Varieties) <br />
+  TTh: 3:00–4:15 PM, WXLR A104.<br /><br />
 
-
-  Math 441 (Ring Theory) <br />
-  MW: 12:00–1:15 PM, WXLRA111.<br />
+  Math 442 (Advanced Linear Algebra) <br />
+  TTh: 12:00–1:15 PM, WXLR A113.<br />
 
 
 
@@ -61,7 +62,8 @@
 
 <h3>Arizona State University</h3>
 
-<h4>Instructor:</h4>
+  <h4>Instructor:</h4>
+  Math 441 (Ring Theory), Spring 2023. <br />
 Math 442 (Advanced Linear Algebra), Fall 2022. <br />
 
 
@@ -72,8 +74,8 @@ Math 442 (Advanced Linear Algebra), Fall 2022. <br />
 
 <h4>Instructor:</h4>
 
-Math 456/526 (Abstract Algebra I: Groups and Rings), Spring 2022<br />
-Math 1521G (Calculus and Analytic Geometry II), Spring 2022<br />
+Math 456/526 (Abstract Algebra I: Groups and Rings), Spring 2022.<br />
+Math 1521G (Calculus and Analytic Geometry II), Spring 2022.<br />
 Math 331 (Introduction to Modern Algebra), Fall 2021. <br />
 Math 1521G (Calculus and Analytic Geometry II), Fall 2021. <br />
 Math 698 (Introduction to Algebraic Statistics), Spring 2021.<br />
