--- a/research.html
+++ b/research.html
@@ -132,7 +132,7 @@ My research is in commutative algebra and its interactions with
 	     <tr valign="top"><td height="35">  16.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2010.07918.pdf"><i>Convex bodies and graded families of monomial ideals</i></a>
      <br />with  Yairon Cid-Ruiz
-     <br /><b>Revista Matem&aacute;tica Iberoamericana</b>  38 (2022), 2033–2056
+     <br /><b>Revista Matem&aacute;tica Iberoamericana</b>  38 (2022), 2033-2056
     </td></tr>
 
 
@@ -168,7 +168,7 @@ My research is in commutative algebra and its interactions with
     <tr valign="top"><td height="35">  12.</td>
      <td height="30"><a href="https://arxiv.org/pdf/2001.08313.pdf"><i>Analytic spread and integral closure of integrally decomposable modules</i></a>
        <br />with Carles Bivi&agrave-Ausina
-       <br /><b>Nagoya Mathematical Journal</b> 245 (2022), 166–191
+       <br /><b>Nagoya Mathematical Journal</b> 245 (2022), 166-191
     </td></tr>
 
 	
