--- a/index.html
+++ b/index.html
@@ -79,8 +79,19 @@ Previously, I was a Visiting Assistant Professor in the <a href="http://math.ku.
 Before joining KU, I was a Ph.D. student at <a href="http://purdue.edu">Purdue University</a> working under the direction of Professor <a href="http://math.purdue.edu/~ulrich">Bernd Ulrich</a>.</p>
 
 <hr />
+  
+<h3>Events</h3>
+  <p> 
+  
+<a
+  href="https://sites.google.com/view/asu-algebra-days/home"><h4>Algebra
+  days at Arizona State.</h4></a>
+  
 
-
+<a
+  href="https://www.math.ttu.edu/~lchriste/slam2023.html"><h4>Southwest
+  Local Algebra Meeting (SLAM 2023).</h4></a>
+  
 <a href="https://jack-jeffries.github.io/PASCA22/PASCA.html"><h4>Pan-American School in Commutative Algebra  (PASCA 2022).</h4></a>
 
 
