--- a/research.html
+++ b/research.html
@@ -309,7 +309,7 @@ My research is in commutative algebra and its interactions with
     
 
 <tr valign="top"><td height="45">  </td>
-<td height="30"><a href="https://faculty.math.illinois.edu/Macaulay2/doc/Macaulay2-1.17/share/doc/Macaulay2/MultiplicitySequence/html/index.html"><i>MultiplicitySequence package in Macaulay2</i></a>
+<td height="30"><a href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MultiplicitySequence/html/index.html"><i>MultiplicitySequence package in Macaulay2</i></a>
   <br />with Justin Chen and Youngsu Kim
   <br /><b> Macaulay2</b>
 </td></tr>
