--- a/research.html
+++ b/research.html
@@ -113,7 +113,7 @@ My research is in commutative algebra and its interactions with
         <tr valign="top"><td height="35">  20.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2103.14175.pdf"><i>Computing multiplicity sequences</i></a>
      <br />with  Justin Chen and Youngsu Kim
-     <br /><b>Submitted</b>
+     <br /><b>to appear in  Journal of Software for Algebra and Geometry</b>
       </td></tr>
 
             <Tr Valign="top"><td height="35">  19.</td>
@@ -311,7 +311,7 @@ My research is in commutative algebra and its interactions with
 <tr valign="top"><td height="45">  </td>
 <td height="30"><a href="https://macaulay2.com/doc/Macaulay2/share/doc/Macaulay2/MultiplicitySequence/html/index.html"><i>MultiplicitySequence package in Macaulay2</i></a>
   <br />with Justin Chen and Youngsu Kim
-  <br /><b> Macaulay2</b>
+  <br /><b> Macaulay2 (certified by JSAG)</b>
 </td></tr>
 
 
@@ -339,7 +339,7 @@ My research is in commutative algebra and its interactions with
  <li><i>Latin-American Algebra Colloquium (plenary)</i>, Pontificia
     Universidad Cat&oacute;lica, Chile, July 22, 2024.<br />
     
- <li><i>2023 CMS Winter Meeting</i>,  Montreal, Canada, December 2, 2023.<br />		
+	
 
       <li><i>Algebra Seminar</i>,  Auburn University, October 16, 2023.<br />
 
