--- a/research.html
+++ b/research.html
@@ -108,21 +108,22 @@ My research is in commutative algebra and its interactions with
      <br /><b>Submitted</b>
       </td></tr>
 
-       <Tr Valign="top"><td height="35">  20.</td>
-      <td height="30"><a href="https://arxiv.org/pdf/2109.10299.pdf"><i>Double Schubert polynomials do have saturated Newton polytopes</i></a>
-     <br />with  Federico Castillo, Yairon Cid-Ruiz, and Fatemeh Mohammadi 
-     <br /><b>to appear in Forum of Mathematics, Sigma</b>
-    </td></tr>
-
- 
-
-        <tr valign="top"><td height="35">  19.</td>
+      
+        <tr valign="top"><td height="35">  20.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2103.14175.pdf"><i>Computing multiplicity sequences</i></a>
      <br />with  Justin Chen and Youngsu Kim
      <br /><b>to appear in  Journal of Software for Algebra and Geometry</b>
       </td></tr>
 
            
+
+       <Tr Valign="top"><td height="35">  19.</td>
+      <td height="30"><a href="https://arxiv.org/pdf/2109.10299.pdf"><i>Double Schubert polynomials do have saturated Newton polytopes</i></a>
+     <br />with  Federico Castillo, Yairon Cid-Ruiz, and Fatemeh Mohammadi 
+     <br /><b>Forum of Mathematics, Sigma</b> 11 (2023), e100
+    </td></tr>
+
+
 
           <tr valign="top"><td height="35">  18.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2210.03358.pdf"><i>Purity of monoids and characteristic-free splittings in semigroup rings</i></a>
