--- a/research.html
+++ b/research.html
@@ -67,7 +67,14 @@ My research is in commutative algebra and its interactions with
 
   <table>
 
+   
+    <tr valign="top"><td height="35">  25.</td>
+      <td height="30"><a href="https://arxiv.org/pdf/2402.12350.pdf"><i>Rational powers, invariant ideals, and the summation formula</i></a>
+     <br />with Sankhaneel Bisui, Sudipta Das, and T&agrave;i Huy H&agrave;
+     <br /><b>Submitted</b>
+       </td></tr>
 
+       
     
     <tr valign="top"><td height="35">  24.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2305.18167.pdf"><i>Ladder determinantal varieties and their symbolic blowups</i></a>
