--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Tempe, AZ 85287-1804</p>
  
     <br />
 
-    My research is supported  by  NSF Grant <b> DMS #2001645/2303605</b>.
+    My research is supported  by the NSF Grant <b> DMS #2001645/2303605</b>.
     
 </p>
 <hr />
@@ -67,21 +67,22 @@ Tempe, AZ 85287-1804</p>
     I am an Assistant Professor in the <a href="https://math.asu.edu">School of Mathematical and Statistical Sciences</a> at <a href="http://asu.edu/">Arizona State University</a>.
  <br />
 <br />
-Until the summer of 2022,  I was an Assistant Professor in the <a
- href="http://math.nmsu.edu/">Department of Mathematical Sciences</a>
- at <a href="http://nmsu.edu/">New Mexico State University</a>. I was
+Until the summer of 2022 I was a faculty member at <a
+ href="http://nmsu.edu/">New Mexico State University</a> where I was
  granted tenure and promoted to Associate Professor in the spring of 2022.
  <br />
 <br />
-Previously, I was a Visiting Assistant Professor in the <a href="http://math.ku.edu/">Department of Mathematics</a> at <a href="http://ku.edu/">University of Kansas</a>. 
-<br />
-<br />
-Before joining KU, I was a Ph.D. student at <a href="http://purdue.edu">Purdue University</a> working under the direction of Professor <a href="http://math.purdue.edu/~ulrich">Bernd Ulrich</a>.</p>
+Previously, I was a postdoc at <a href="http://ku.edu/">University of
+ Kansas</a>, and before that,  a Ph.D. student at <a href="http://purdue.edu">Purdue University</a>.</p>
 
 <hr />
   
 <h3>Events</h3>
   <p> 
+
+<a
+  href="https://www.math.ttu.edu/~lchriste/slam2024.html"><h4>Southwest
+  Local Algebra Meeting (SLAM 2024).</h4></a>  
   
 <a
   href="https://sites.google.com/view/asu-algebra-days/home"><h4>Algebra
@@ -96,23 +97,4 @@ Before joining KU, I was a Ph.D. student at <a href="http://purdue.edu">Purdue U
 
 
 
-
-<hr/>
-
-
-<h3>Some Links</h3>
-<p> 
-
-<a href="http://arxiv.org/find/math/1/au:+Montano_J/0/1/0/all/0/1">arXiv
-  personal page.</a><br />
-<a href="https://arxiv.org/list/math.AC/recent">arXiv commutative algebra.</a><br />
-  <a href="http://www.commalg.org/">Commalg.</a><br />
-  <a href="https://math.asu.edu">ASU School of Mathematical and Statistical Sciences.</a><br />
-<a href="https://math.nmsu.edu">NMSU Math Department.</a><br />
-<a href="http://www.math.ku.edu/">KU Math Department.</a><br />
-<a href="http://www.math.purdue.edu/">Purdue Math Department.</a><br />
-</p>
-</p>
-
-</html>
 
