--- a/research.html
+++ b/research.html
@@ -34,21 +34,17 @@
 
 <div id="rightcolumn">
 <div id="rightcolumn">
-<img src="Photo_Webpage.jpg"
+<!--<img src="Photo_Webpage.jpg"
   height: auto  Hspace = "20" Vspace ="20"  id=jmResearch>
+  -->
  
 <h2>Research</h2>
 <p style="text-align:justify" >
-My research is in commutative algebra and its interactions with
-  combinatorics and algebraic geometry. In particular, I am interested
-  in multiplicities, blowup algebras, integral dependence, residual
-  intersections, local cohomology, symbolic powers, resolutions, and
-  convex geometry.
+My research is in commutative algebra, 
+  combinatorics, and algebraic geometry, and it is supported  by the NSF Grant <b> DMS #2001645/2303605</b>.
 </p>
 
-  <br />
-
-  My research is supported  by  NSF Grant <b> DMS #2001645/2303605</b>.
+ 
 
   <br />
 
@@ -61,9 +57,9 @@ My research is in commutative algebra and its interactions with
 
 
 
-  <br /><b>Mathematics: </b>
+ <!-- <br /><b>Mathematics: </b>
 
-  <br /><br />
+  <br /><br />-->
 
   <table>
 
