--- a/teaching.html
+++ b/teaching.html
@@ -24,7 +24,7 @@
 
 <div id="rightcolumn">
 <div id="rightcolumn">
-<img src="IMG_8372.jpg" height: auto  Hspace = "20" Vspace ="20"  id=jmTeaching>
+<!--<img src="IMG_8372.jpg" height: auto  Hspace = "20" Vspace ="20"  id=jmTeaching>-->
 <h2>Teaching</h2>
 <p style="text-align:justify"> 
 
@@ -33,36 +33,43 @@
 
 </p>
 
-<h3>Arizona State University</h3>
 
+
+  <!--
+  <h3>Arizona State University</h3>
+  
   <h4>Current semester (Fall 2023):</h4>
 
   Math 598 (Introduction to Algebraic Geometry and Toric Varieties) <br />
   TTh: 3:00–4:15 PM, WXLR A104.<br /><br />
 
   Math 442 (Advanced Linear Algebra) <br />
-  TTh: 12:00–1:15 PM, WXLR A113.<br />
+  TTh: 12:00–1:15 PM, WXLR A113.<br />.-->
 
 
 
 
 
-<!--Office hours:  TR 3:00 - 4:00 PM (Online),  or by appointment.-->
+<!--Office hours:  TR 3:00 - 4:00 PM (Online),  or by appointment.
 
 
 
 
 <br />
 <br />
+-->  
 <hr />
 
-<br />
 
-  Below is the list of courses I have taught so far.<br />
+
+ 
+  <br />
 
 <h3>Arizona State University</h3>
 
-  <h4>Instructor:</h4>
+
+    Math 598 (Introduction to Algebraic Geometry and Toric Varieties),  Fall 2023. <br />
+   Math 442 (Advanced Linear Algebra),  Fall 2023. <br />
   Math 441 (Ring Theory), Spring 2023. <br />
 Math 442 (Advanced Linear Algebra), Fall 2022. <br />
 
@@ -72,7 +79,7 @@ Math 442 (Advanced Linear Algebra), Fall 2022. <br />
 
 <h3>New Mexico State University</h3>
 
-<h4>Instructor:</h4>
+
 
 Math 456/526 (Abstract Algebra I: Groups and Rings), Spring 2022.<br />
 Math 1521G (Calculus and Analytic Geometry II), Spring 2022.<br />
@@ -92,7 +99,7 @@ Math 191G (Calculus and Analytic Geometry I), Fall 2018.<br />
 
 <h3>University of Kansas</h3>
 
-<h4>Instructor:</h4>
+
 
 Math 147 (Calculus III, Honors), Spring 2018<br />
 Math 558 (Introductory Modern Algebra), Fall 2017.<br />
@@ -111,11 +118,11 @@ Math 590 (Linear Algebra), Fall 2015.
 <h3>Purdue University</h3>
 
 
-<h4>Instructor:</h4>
+
 Introductory Analysis I, Spring 2014, for business students.<br />
 Introductory Analysis II, Fall 2013, for business students.<br />
 
-<h4>Recitation Instructor:</h4>
+<h4>Recitation instructor for:</h4>
 
 Plane Analytic Geometry And Calculus I, Spring 2013, for engineering and science students.<br />
 Plane Analytic Geometry And Calculus II, Spring 2012, for engineering and science students.<br />
@@ -127,7 +134,7 @@ Multivariable Calculus, Fall 2010, for mathematics students.<br />
 <h3>Universidad Nacional de Colombia</h3>
 
 
-<h4>Instructor:</h4>
+
 Linear Algebra, Spring 2009, for engineering students.<br />
 Calculus I, Fall 2008, for engineering students.<br /><br /><br />
 
