--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Tempe, AZ 85287-1804</p>
     I am an Assistant Professor in the <a href="https://math.asu.edu">School of Mathematical and Statistical Sciences</a> at <a href="http://asu.edu/">Arizona State University</a>.
  <br />
 <br />
-Until the summer of 2022 I was a faculty member at <a
+Until 2022 I was a faculty member at <a
  href="http://nmsu.edu/">New Mexico State University</a> where I was
  granted tenure and promoted to Associate Professor in the spring of 2022.
  <br />
