--- a/research.html
+++ b/research.html
@@ -117,7 +117,7 @@ My research is in commutative algebra,
         <tr valign="top"><td height="35">  20.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2103.14175.pdf"><i>Computing multiplicity sequences</i></a>
      <br />with  Justin Chen and Youngsu Kim
-     <br /><b>to appear in  Journal of Software for Algebra and Geometry</b>
+     <br /><b>Journal of Software for Algebra and Geometry</b> 14 (2024), 13--18
       </td></tr>
 
            
