--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </div>
 
 <div id="rightcolumn">
-<img src="Jonathan.jpg"  width: 400% 
-  height: auto Hspace = "20" Vspace ="20"  id=jmontano>
+<img src="MFO_Montano_Oberwolfach.jpg"  style="width:300px;height:auto;" 
+ id=jmontano>
 <h1>Jonathan Monta&ntilde;o</h1>
   <p>
   School of Mathematical and Statistical Sciences <br />
