--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <div id="rightcolumn">
 <img src="MFO_Montano_Oberwolfach.jpg"  style="width:250px;height:auto;" 
- id=jmontano>
+  Hspace = "20" Vspace ="20" id=jmontano>
 <h1>Jonathan Monta&ntilde;o</h1>
   <p>
   School of Mathematical and Statistical Sciences <br />
