--- a/research.html
+++ b/research.html
@@ -97,19 +97,23 @@ My research is in commutative algebra,
        
   
 
-       <tr valign="top"><td height="35">  22.</td>
-      <td height="30"><a href="https://arxiv.org/pdf/2109.00592.pdf"><i>Blowup algebras of determinantal ideals in prime characteristic</i></a>
-     <br />with Alessandro De Stefani and  Luis N&uacute;&ntilde;ez-Betancourt
-     <br /><b>to appear in Journal of the London Mathematical Society</b>
-      </td></tr>
+  
 
-             <Tr Valign="top"><td height="35">  21.</td>
+             <Tr Valign="top"><td height="35">  22.</td>
       <td height="30"><a
       href="https://arxiv.org/pdf/2303.10486.pdf"><i>The core of
       monomial ideals</i></a>
      <br />with  Louiza Fouli, Claudia Polini, and Bernd Ulrich 
      <br /><b>to appear in Algebra & Number Theory</b>
-    </td></tr>
+      </td></tr>
+
+           <tr valign="top"><td height="35">  21.</td>
+      <td height="30"><a href="https://arxiv.org/pdf/2109.00592.pdf"><i>Blowup algebras of determinantal ideals in prime characteristic</i></a>
+     <br />with Alessandro De Stefani and  Luis N&uacute;&ntilde;ez-Betancourt
+     <br /><b>to appear in Journal of the London Mathematical
+      Society</b> 110 (2024), e12969
+       </td></tr>
+
 
     
 
