--- a/grants.html
+++ b/grants.html
@@ -61,10 +61,17 @@
 <h2>Awards, Fellowships, and Grants</h2>
 <div id="bb">
   <ul>
+    <li>   NSF Standard Grant, DMS #2401522: <i>Multigraded commutative algebra and asymptotic behavior of filtrations of ideals,</i> 2024-2027.<br />
 
-    <li>   Research Member, SLMath(MSRI), Spring 2024 <br />
 
-    <li>   NSF Standard Grant, DMS #2001645/2303605: <i>Asymptotic growth of symbolic powers, mixed multiplicities, and convex bodies,</i> 2020-2024.<br />
+
+
+
+    <li>   NSF Standard Grant, DMS #2001645/2303605: <i>Asymptotic
+    growth of symbolic powers, mixed multiplicities, and convex
+    bodies,</i> 2020-2024.<br />
+
+        <li>   Research Member, SLMath(MSRI), Spring 2024 <br />
 
      <li>  NSA Conference Grant,<i> SLAM 2024,</i> February 2024 <br />
   
