--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Tempe, AZ 85287-1804</p>
  
     <br />
 
-    My research is supported  by the NSF Grant <b> DMS #2001645/2303605</b>.
+    My research is supported  by the NSF Grant <b> DMS #2401522</b>.
     
 </p>
 <hr />
