--- a/research.html
+++ b/research.html
@@ -41,7 +41,7 @@
 <h2>Research</h2>
 <p style="text-align:justify" >
 My research is in commutative algebra, 
-  combinatorics, and algebraic geometry, and it is supported  by the NSF Grant <b> DMS #2001645/2303605</b>.
+  combinatorics, and algebraic geometry, and it is supported  by the NSF Grant <b> DMS #2401522</b>.
 </p>
 
  
