--- a/teaching.html
+++ b/teaching.html
@@ -67,11 +67,13 @@
 
 <h3>Arizona State University</h3>
 
+   MAT 543 (Abstract Algebra I),  Fall 2024. <br />
+ 
 
-    Math 598 (Introduction to Algebraic Geometry and Toric Varieties),  Fall 2023. <br />
-   Math 442 (Advanced Linear Algebra),  Fall 2023. <br />
-  Math 441 (Ring Theory), Spring 2023. <br />
-Math 442 (Advanced Linear Algebra), Fall 2022. <br />
+    MAT 598 (Introduction to Algebraic Geometry and Toric Varieties),  Fall 2023. <br />
+   MAT 442 (Advanced Linear Algebra),  Fall 2023. <br />
+  MAT 441 (Ring Theory), Spring 2023. <br />
+MAT 442 (Advanced Linear Algebra), Fall 2022. <br />
 
 
 <hr />
