--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@ My research is in commutative algebra,
            <tr valign="top"><td height="35">  21.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2109.00592.pdf"><i>Blowup algebras of determinantal ideals in prime characteristic</i></a>
      <br />with Alessandro De Stefani and  Luis N&uacute;&ntilde;ez-Betancourt
-     <br /><b>to appear in Journal of the London Mathematical
+     <br /><b>Journal of the London Mathematical
       Society</b> 110 (2024), e12969
        </td></tr>
 
