--- a/index.html
+++ b/index.html
@@ -75,11 +75,21 @@ Until 2022 I was a faculty member at <a
 Previously, I was a postdoc at <a href="http://ku.edu/">University of
  Kansas</a>, and before that,  a Ph.D. student at <a href="http://purdue.edu">Purdue University</a>.</p>
 
+
+
+  
+
 <hr />
   
 <h3>Events</h3>
   <p> 
 
+
+<a  href="https://sites.google.com/asu.edu/nt-a-seminar/home"><h4>Number
+  Theory and Algebra Seminar at ASU</h4></a>   
+ 
+
+  
 <a
   href="https://www.math.ttu.edu/~lchriste/slam2024.html"><h4>Southwest
   Local Algebra Meeting (SLAM 2024).</h4></a>  
