--- a/index.html
+++ b/index.html
@@ -85,14 +85,23 @@ Previously, I was a postdoc at <a href="http://ku.edu/">University of
   <p> 
 
 
-<a  href="https://sites.google.com/asu.edu/nt-a-seminar/home"><h4>Number
-  Theory and Algebra Seminar at ASU</h4></a>   
- 
+  <a
+  href="https://www.math.ttu.edu/~lchriste/slam2025.html"><h4>Southwest
+  Local Algebra Meeting (SLAM 2025).</h4></a>  
 
+
+<a  href="https://sites.google.com/asu.edu/nt-a-seminar/home"><h4>Number
+  Theory and Algebra Seminar at ASU.</h4></a>   
+ 
+  <hr />
+
+ <h4>Past events</h4>
+  <p>
   
-<a
+ <a
   href="https://www.math.ttu.edu/~lchriste/slam2024.html"><h4>Southwest
   Local Algebra Meeting (SLAM 2024).</h4></a>  
+
   
 <a
   href="https://sites.google.com/view/asu-algebra-days/home"><h4>Algebra
