--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ WXLR Room 216 <br />
 Tempe, AZ 85287-1804</p>
   <p>
 <!-- <b>Office</b>: Science Hall 261<br />-->
-<b>Email</b>: montano at asu dot edu
+<b>Email</b>: montano@asu.edu
 <br\>
 <br\>
 </p>
