--- a/research.html
+++ b/research.html
@@ -63,6 +63,14 @@ My research is in commutative algebra,
 
   <table>
 
+      
+    <tr valign="top"><td height="35">  26.</td>
+      <td height="30"><a href="https://arxiv.org/pdf/2503.14429"><i>Multiplicities and degree functions in local rings via intersection products</i></a>
+     <br />with Steven Dale Cutkosky
+     <br /><b>Submitted</b>
+       </td></tr>
+
+
    
     <tr valign="top"><td height="35">  25.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2402.12350.pdf"><i>Rational powers, invariant ideals, and the summation formula</i></a>
