--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Tempe, AZ 85287-1804</p>
 <hr />
   <p style="text-align:justify">
 
-    I am an Assistant Professor in the <a href="https://math.asu.edu">School of Mathematical and Statistical Sciences</a> at <a href="http://asu.edu/">Arizona State University</a>.
+    I am an Associate Professor in the <a href="https://math.asu.edu">School of Mathematical and Statistical Sciences</a> at <a href="http://asu.edu/">Arizona State University</a>.
  <br />
 <br />
 Until 2022 I was a faculty member at <a
@@ -84,19 +84,28 @@ Previously, I was a postdoc at <a href="http://ku.edu/">University of
 <h3>Events</h3>
   <p> 
 
+  
+<a
+  href="https://sites.google.com/asu.edu/az-nmsymposium/home"><h4>AZ-NM
+  Symposium on Commutative Algebra and its Interactions: Geometric Combinatorics.</h4></a>
 
-  <a
-  href="https://www.math.ttu.edu/~lchriste/slam2025.html"><h4>Southwest
-  Local Algebra Meeting (SLAM 2025).</h4></a>  
+
+<a href="https://jack-jeffries.github.io/PASCA26/PASCA.html"><h4>Pan-American School in Commutative Algebra  (PASCA 2.0).</h4></a>
 
 
-<a  href="https://sites.google.com/asu.edu/nt-a-seminar/home"><h4>Number
-  Theory and Algebra Seminar at ASU.</h4></a>   
+
  
   <hr />
 
  <h4>Past events</h4>
   <p>
+
+  <a  href="https://sites.google.com/asu.edu/nt-a-seminar/home"><h4>Number
+  Theory and Algebra Seminar at ASU.</h4></a>   
+  
+  <a
+  href="https://www.math.ttu.edu/~lchriste/slam2025.html"><h4>Southwest
+  Local Algebra Meeting (SLAM 2025).</h4></a>  
   
  <a
   href="https://www.math.ttu.edu/~lchriste/slam2024.html"><h4>Southwest
