--- a/teaching.html
+++ b/teaching.html
@@ -65,8 +65,12 @@
  
   <br />
 
-<h3>Arizona State University</h3>
+  <h3>Arizona State University</h3>
 
+     MAT 545 (Abstract Algebra III),  Fall 2025.<br />
+
+   MAT 544 (Abstract Algebra II),  Spring 2025.<br />
+  
    MAT 543 (Abstract Algebra I),  Fall 2024.<br />
  
 
