--- a/research.html
+++ b/research.html
@@ -119,7 +119,7 @@ My research is in commutative algebra,
       href="https://arxiv.org/pdf/2303.10486.pdf"><i>The core of
       monomial ideals</i></a>
      <br />with  Louiza Fouli, Claudia Polini, and Bernd Ulrich 
-     <br /><b>to appear in Algebra & Number Theory</b>
+     <br /><b>Algebra & Number Theory</b> 19 (2025), 1463-1494
       </td></tr>
 
            <tr valign="top"><td height="35">  21.</td>
