--- a/research.html
+++ b/research.html
@@ -63,6 +63,15 @@ My research is in commutative algebra,
 
   <table>
 
+        <tr valign="top"><td height="35">  28.</td>
+      <td height="30"><a href="https://arxiv.org/pdf/2512.18536"><i>Quasipolynomial behavior via constructability in multigraded algebra</i></a>
+     <br />with  Hailong Dao, Ezra Miller, Christopher O'Neill, and Kevin Woods
+     <br /><b>Submitted</b>
+       </td></tr>
+
+    
+      
+
      <tr valign="top"><td height="35">  27.</td>
       <td height="30"><a href="https://arxiv.org/pdf/2506.05248"><i>Degree functions of  graded families of ideals</i></a>
      <br />with Steven Dale Cutkosky
