--- a/research.html
+++ b/research.html
@@ -64,7 +64,7 @@ My research is in commutative algebra,
   <table>
 
         <tr valign="top"><td height="35">  28.</td>
-      <td height="30"><a href="https://arxiv.org/pdf/2512.18536"><i>Quasipolynomial behavior via constructability in multigraded algebra</i></a>
+      <td height="30"><a href="https://arxiv.org/pdf/2512.18536"><i>Quasipolynomial behavior via constructibility in multigraded algebra</i></a>
      <br />with  Hailong Dao, Ezra Miller, Christopher O'Neill, and Kevin Woods
      <br /><b>Submitted</b>
        </td></tr>
