--- a/research.html
+++ b/research.html
@@ -311,7 +311,8 @@ My research is in commutative algebra,
 <tr valign="top"><td height="45">  4.</td>
 <td height="30"><a href="https://arxiv.org/pdf/2503.07848"><i>Safe Explicable Policy Search</i></a>
   <br />with Akkamahadevi Hanni and  Yu Zhang
-  <br /><b>Submitted</b>
+  <br /><b>IEEE International Conference on Robotics and Automation
+  (ICRA) 2026</b>
 </td></tr>
 
     
